k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-app
  namespace: devops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-app
  template:
    metadata:
      labels:
        app: task-app
    spec:
      containers:
      - name: task-app
        image: bhupendra/devops-app:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
