k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-ingress-devops   # ✅ changed name
  namespace: devops
spec:
  rules:
  - host: devops.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: task-service
            port:
              number: 80
